--- a/requirements.txt
+++ b/requirements.txt
@@ -8,21 +8,36 @@ click-didyoumean==0.0.3
 click-plugins==1.1.1
 click-repl==0.2.0
 Flask==2.0.1
+flask-marshmallow==0.14.0
 flask-restx==0.5.0
 Flask-SQLAlchemy==2.5.1
+flower==1.0.0
 greenlet==1.1.1
+humanize==3.11.0
+iniconfig==1.1.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
 jsonschema==3.2.0
 kombu==5.1.0
 MarkupSafe==2.0.1
+marshmallow==3.13.0
+marshmallow-sqlalchemy==0.26.1
 mysqlclient==2.0.3
+packaging==21.0
+pluggy==0.13.1
+prometheus-client==0.11.0
 prompt-toolkit==3.0.19
+py==1.10.0
+pyparsing==2.4.7
 pyrsistent==0.18.0
+pytest==6.2.4
+pytest-celery==0.0.0
 pytz==2021.1
 redis==3.5.3
 six==1.16.0
 SQLAlchemy==1.4.22
+toml==0.10.2
+tornado==6.1
 vine==5.0.0
 wcwidth==0.2.5
 Werkzeug==2.0.1
